# self-examples

cpp_coroutinues_and_boost_asi_tcp_server/: CMakeLists.txt  main.cpp  main_client.cpp
cpp_etcd_and_leader_election/: CMakeLists.txt  docker-compose.yaml  main.cpp
cpp_etcd_and_leader_election/src/: main.cpp
cpp_etcd_and_leader_election/src/election/: election.cpp  election.hpp
some_cpp/: CMakeLists.txt
some_cpp/src/: database.hpp  main.cpp
typescript-iterator/: README.md  consumer.ts  docker-compose.yaml  index.ts  package.json  publisher.ts  sse.html
voice-model/: .gitignore  main.py
whisper-1/: dockerfile  main.py  requirements.txt  sample.m4a  tts_service.py  whisper_service.py
whisper-1/scripts/: build-docker.sh  run-docker.sh
